--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,16 @@ on:
     - "v*"
 
 jobs:
-  create_release:
-    name: Create Github release
+  Build:
+    name: Build all releases
     runs-on: ubuntu-latest
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Setup Golang
+        uses: actions/setup-go@v2
+        with:
+          go-version: "^1.14.7"
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
@@ -22,28 +26,17 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: true
-
-  build_linux:
-    name: Build for Linux
-    runs-on: ubuntu-latest
-    needs: create_release
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Setup Golang
-        uses: actions/setup-go@v2
-        with:
-          go-version: "^1.14.7"
-      - name: Build Nordsyd CLI
+      - name: Build for Linux
         run: |
-          go build main.go -o ./nordsyd
+          env GOOS=linux GOARCH=amd64
+          go build -o ./nordsyd-linux-amd64 main.go
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: ./nordsyd
-          asset_name: nordsyd
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./nordsyd-linux-amd64
+          asset_name: nordsyd-linux-amd64
           asset_content_type: application/octet-stream
