--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,45 +12,57 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
       - name: Setup Golang
         uses: actions/setup-go@v2
         with:
           go-version: "^1.14.7"
+
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
       - name: Build for Linux (amd64)
         env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
           GOOS: linux
           GOARCH: amd64
-        run: go build -o ./nordsyd-linux-amd64 main.go
+        run: go build -o ./nordsyd-linux-amd64 -ldflags="-X github.com/nordsyd/cli/cmd.Version=${VERSION}" main.go
 
       - name: Build for Linux (386)
         env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
           GOOS: linux
           GOARCH: 386
-        run: go build -o ./nordsyd-linux-386 main.go
+        run: go build -o ./nordsyd-linux-386 -ldflags="-X github.com/nordsyd/cli/cmd.Version=${VERSION}" main.go
 
       - name: Build for macOS (amd64)
         env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
           GOOS: darwin
           GOARCH: amd64
-        run: go build -o ./nordsyd-darwin-amd64 main.go
+        run: go build -o ./nordsyd-darwin-amd64 -ldflags="-X github.com/nordsyd/cli/cmd.Version=${VERSION}" main.go
 
       - name: Build for Windows (amd64)
         env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
           GOOS: windows
           GOARCH: amd64
-        run: go build -o ./nordsyd-windows-amd64.exe main.go
+        run: go build -o ./nordsyd-windows-amd64.exe -ldflags="-X github.com/nordsyd/cli/cmd.Version=${VERSION}" main.go
 
       - name: Build for Windows (386)
         env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
           GOOS: windows
           GOARCH: 386
-        run: go build -o ./nordsyd-windows-386.exe main.go
+        run: go build -o ./nordsyd-windows-386.exe -ldflags="-X github.com/nordsyd/cli/cmd.Version=${VERSION}" main.go
 
       - name: Build for Windows (arm)
         env:
+          VERSION: ${{ steps.get_version.outputs.VERSION }}
           GOOS: windows
           GOARCH: arm
-        run: go build -o ./nordsyd-windows-arm.exe main.go
+        run: go build -o ./nordsyd-windows-arm.exe -ldflags="-X github.com/nordsyd/cli/cmd.Version=${VERSION}" main.go
 
       - name: Release
         uses: softprops/action-gh-release@v1
