Revert "added authentication"
This reverts commit 82854df02b18d5d2083661aa2f8d80aa13260e5f.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,8 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          prerelease: true
+          fail_on_unmatched_files: true
+          prelease: true
           files: |
             nordsyd-linux-amd64
             nordsyd-linux-386
